<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/createPasswordLayout"
    tools:context=".activities.CreatePasswordActivity">




    <TextView
        android:id="@+id/textNewAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:gravity="center"
        android:text="@string/uygulama_sifresi_olustur"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:gravity="center"
        android:text="@string/_1_kereye_mahsus_uygulama_ifresi_olu_turman_z_gerekmektedir_uygulamaya_her_giri_inizde_ifreniz_istenilecektir"
        android:textColor="@color/colorTextHint"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintTop_toBottomOf="@id/textNewAddNote"/>

    <ImageView
        android:id="@+id/imgTouch"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_touch"
        app:tint="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@drawable/background_input"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/imgTouch">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_password"
            app:tint="@color/colorWhite" />

        <EditText
            android:id="@+id/inputPassword1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/yeni_sifre"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSearch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@drawable/background_input"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_password"
            app:tint="@color/colorWhite" />

        <EditText
            android:id="@+id/inputPassword2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/yeni_sifre"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSearch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@drawable/background_button"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/inputSearch3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@null"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/kaydet"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13ssp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Şifrenizi daha sonra değiştirebileceksiniz."
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/ubuntu_regular"
        android:textSize="@dimen/_8ssp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch3"
        />





</androidx.constraintlayout.widget.ConstraintLayout>