<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/enterPasswordLayout"
    tools:context=".activities.EnterPasswordActivity">

    <TextView
        android:id="@+id/textNewAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:gravity="center"
        android:text="@string/giris_ekran"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:includeFontPadding="false"
        android:gravity="center"
        android:text="Daha önce oluşturduğunuz şifreyi giriniz."
        android:textColor="@color/colorTextHint"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@id/textNewAddNote"/>

    <ImageView
        android:id="@+id/imgAccount"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_account"
        app:tint="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hoş Geldin."
        android:fontFamily="@font/ubuntu_regular"
        android:textAlignment="center"
        android:includeFontPadding="false"
        android:textSize="@dimen/_9ssp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/imgAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@drawable/background_input"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_password"
            app:tint="@color/colorWhite" />

        <EditText
            android:id="@+id/inputPassword1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/sifrenizi_girin"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/layoutSearch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@drawable/background_button"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/inputSearch3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@null"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/giris_yap"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13ssp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>